==> pbures/RFMExperiments/RFM69HW/RFM69.cpp <==
#include "RFM69.h"
#include "RFM69registers.h"
#include "SPI.h"
#include "TimerClass.h"
#include "config.h"

bool RFM69::initialize(uint8_t freqBand, uint8_t nodeID, uint8_t networkID) {
	const uint8_t CONFIG[][2] =
	{
		/* 0x01 */{ REG_OPMODE, RF_OPMODE_SEQUENCER_ON | RF_OPMODE_LISTEN_OFF | RF_OPMODE_STANDBY },
		/* 0x02 */{ REG_DATAMODUL, RF_DATAMODUL_DATAMODE_PACKET	| RF_DATAMODUL_MODULATIONTYPE_FSK | RF_DATAMODUL_MODULATIONSHAPING_00 }, // no shaping
		/* 0x03 */{ REG_BITRATEMSB, RF_BITRATEMSB_55555 }, // default: 4.8 KBPS
		/* 0x04 */{ REG_BITRATELSB, RF_BITRATELSB_55555 },
		/* 0x05 */{ REG_FDEVMSB, RF_FDEVMSB_50000 }, // default: 5KHz, (FDEV + BitRate / 2 <= 500KHz)
		/* 0x06 */{ REG_FDEVLSB, RF_FDEVLSB_50000 },

		/* 0x07 */{ REG_FRFMSB, (uint8_t) (
			freqBand == RF69_315MHZ ?
			RF_FRFMSB_315 :
			(freqBand == RF69_433MHZ ?
			RF_FRFMSB_433 :
			(freqBand == RF69_868MHZ ?
			RF_FRFMSB_868 :
		RF_FRFMSB_915))) },
		/* 0x08 */{ REG_FRFMID, (uint8_t) (
			freqBand == RF69_315MHZ ?
			RF_FRFMID_315 :
			(freqBand == RF69_433MHZ ?
			RF_FRFMID_433 :
			(freqBand == RF69_868MHZ ?
			RF_FRFMID_868 :
		RF_FRFMID_915))) },
		/* 0x09 */{ REG_FRFLSB, (uint8_t) (
			freqBand == RF69_315MHZ ?
			RF_FRFLSB_315 :
			(freqBand == RF69_433MHZ ?
			RF_FRFLSB_433 :
			(freqBand == RF69_868MHZ ?
			RF_FRFLSB_868 :
		RF_FRFLSB_915))) },

		// looks like PA1 and PA2 are not implemented on RFM69W, hence the max output power is 13dBm
		// +17dBm and +20dBm are possible on RFM69HW
		// +13dBm formula: Pout = -18 + OutputPower (with PA0 or PA1**)
		// +17dBm formula: Pout = -14 + OutputPower (with PA1 and PA2)**
		// +20dBm formula: Pout = -11 + OutputPower (with PA1 and PA2)** and high power PA settings (section 3.3.7 in datasheet)
		///* 0x11 */ { REG_PALEVEL, RF_PALEVEL_PA0_ON | RF_PALEVEL_PA1_OFF | RF_PALEVEL_PA2_OFF | RF_PALEVEL_OUTPUTPOWER_11111},
		///* 0x13 */ { REG_OCP, RF_OCP_ON | RF_OCP_TRIM_95 }, // over current protection (default is 95mA)

		// RXBW defaults are { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_5} (RxBw: 10.4KHz)
		//for BR-19200: /* 0x19 */ { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_3 },
		
		/* 0x19 */{ REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_16	| RF_RXBW_EXP_2 }, // (BitRate < 2 * RxBw)
		/* 0x25 */{ REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_01 }, // DIO0 is the only IRQ we're using
		/* 0x26 */{ REG_DIOMAPPING2, RF_DIOMAPPING2_CLKOUT_OFF }, // DIO5 ClkOut disable for power saving
		/* 0x28 */{ REG_IRQFLAGS2, RF_IRQFLAGS2_FIFOOVERRUN }, // writing to this bit ensures that the FIFO & status flags are reset
		/* 0x29 */{ REG_RSSITHRESH, 220 }, // must be set to dBm = (-Sensitivity / 2), default is 0xE4 = 228 so -114dBm
		///* 0x2D */ { REG_PREAMBLELSB, RF_PREAMBLESIZE_LSB_VALUE } // default 3 preamble bytes 0xAAAAAA
		
		/* 0x2E */{ REG_SYNCCONFIG, RF_SYNC_ON | RF_SYNC_FIFOFILL_AUTO | RF_SYNC_SIZE_2	| RF_SYNC_TOL_0 },
		
		//TODO: Why this has to be set to 0x2D??? Does not work for me with 0x00.
		/* 0x2F */{ REG_SYNCVALUE1, 0x2D }, // attempt to make this compatible with sync1 byte of RFM12B lib

		/* 0x30 */{ REG_SYNCVALUE2, networkID }, // NETWORK ID
		/* 0x37 */{ REG_PACKETCONFIG1, RF_PACKET1_FORMAT_VARIABLE  | RF_PACKET1_DCFREE_OFF | RF_PACKET1_CRC_ON | RF_PACKET1_CRCAUTOCLEAR_ON | RF_PACKET1_ADRSFILTERING_NODE },
		
		/* 0x38 */{ REG_PAYLOADLENGTH, 66 }, // in variable length mode: the max frame size, not used in TX
		
		/* 0x39 */{ REG_NODEADRS, nodeID},
		
		/* 0x3C */{ REG_FIFOTHRESH, RF_FIFOTHRESH_TXSTART_FIFONOTEMPTY | RF_FIFOTHRESH_VALUE }, // TX on FIFO not empty
		/* 0x3D */{ REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_2BITS | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, // RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
		
		//for BR-19200: /* 0x3D */ { REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_NONE | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, // RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
		/* 0x6F */{ REG_TESTDAGC, RF_DAGC_IMPROVED_LOWBETA0 }, // run DAGC continuously in RX mode for Fading Margin Improvement, recommended default for AfcLowBetaOn=0
		{ 255, 0 } };

		SPI.begin();

		SET_OUTPUT_MODE(RF69_SPI_CS_DDR, RF69_SPI_CS_BIT);
		SET_HIGH(RF69_SPI_CS_PORT, RF69_SPI_CS_BIT);

		printf("RFM69 Init started.\r\n");
		uint32_t start = Timer.millis();
		uint8_t timeout = 50;
		do
		writeReg(REG_SYNCVALUE1, 0xAA);
		while (readReg(REG_SYNCVALUE1) != 0xaa && Timer.millis() - start < timeout);
		start = Timer.millis();
		do
		writeReg(REG_SYNCVALUE1, 0x55);
		while (readReg(REG_SYNCVALUE1) != 0x55 && Timer.millis() - start < timeout);

		for (uint8_t i = 0; CONFIG[i][0] != 255; i++)
		writeReg(CONFIG[i][0], CONFIG[i][1]);

		encrypt(0);
		setHighPower(_isRFM69HW); // called regardless if it's a RFM69W or RFM69HW
		setMode(RF69_MODE_STANDBY);
		
		start = Timer.millis();
		while (((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00) && Timer.millis() - start < timeout) {;} // wait for ModeReady
		if (Timer.millis() - start >= 1000){
			return false;
		}

		_inISR = false;
		selfPointer = this;
		_address = nodeID;

		/* INT0 on rising edge */
		SET_INPUT_MODE(RF69_DIO0_DDR, RF69_DIO0_BIT);

		EIMSK |= (1 << INT0);
		EICRA |= ((1 << ISC01) | (1 << ISC00));
		sei();

		printf("Config or RFM69 done.\r\n");
		return true;
	}

	inline void RFM69::sendFrame(uint8_t toAddress, const void* buffer, uint8_t bufferSize,	bool requestACK, bool sendACK) {

		setMode(RF69_MODE_STANDBY); // turn off receiver to prevent reception while filling fifo

		while ((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00) {;} // wait for ModeReady
		writeReg(REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_00); // DIO0 is "Packet Sent"
		
		bufferSize = ((bufferSize > RF69_MAX_DATA_LEN) ? RF69_MAX_DATA_LEN : bufferSize);

		// Control byte
		uint8_t CTLbyte = 0x00;
		if (sendACK) {
			CTLbyte = RFM69_CTL_SENDACK;
		} else if (requestACK) {
			CTLbyte = RFM69_CTL_REQACK;
		}
		
		select();
		SPI.transfer(REG_FIFO | 0x80);
		SPI.transfer(bufferSize + 3);
		SPI.transfer(toAddress);
		SPI.transfer(_address);
		SPI.transfer(CTLbyte);

		for (uint8_t i = 0; i < bufferSize; i++){
			SPI.transfer(((uint8_t*) buffer)[i]);
		}
		unselect();

		/* Module starts transmitting immediately after it is set to TX */
		setMode(RF69_MODE_TX);
		
		uint32_t txStart = Timer.millis();
		
		/* Wait for DIO0 goes up after transmit. Interrupt handler is called but does
		 * nothing as we are in TX mode, not in RX mode 
		 */
		while (true) {
			if ((RF69_DIO0_PIN & (1<<RF69_DIO0_BIT)) != 0 ) {
				break;
			}
			
			if (Timer.millis() - txStart > RF69_TX_LIMIT_MS) {
				printf("\r\nTimeout during waiting for DIO0 send TX success\r\n");
				break;
			}
		}
		
		/* I don't know why, but when the delay is here the RSSI signal on receiver is much stronger */
		_delay_ms(20);
		
		setMode(RF69_MODE_STANDBY);
	}

	void RFM69::select() {
		_SREG = SREG;
		cli();
		#if defined (SPCR) && defined (SPSR)
		// save current SPI settings
		_SPCR = SPCR;
		_SPSR = SPSR;
		#endif
		// set RFM69 SPI settings
		SPI.setDataMode(SPI_MODE0);
		SPI.setBitOrder(MSBFIRST);
		SPI.setClockDivider(SPI_CLOCK_DIV4); // decided to slow down from DIV2 after SPI stalling in some instances, especially visible on mega1284p when RFM69 and FLASH chip both present
		SET_LOW(RF69_SPI_CS_PORT, RF69_SPI_CS_BIT);
	}

	void RFM69::unselect() {
		SET_HIGH(RF69_SPI_CS_PORT, RF69_SPI_CS_BIT);

		#if defined (SPCR) && defined (SPSR)
		SPCR = _SPCR;
		SPSR = _SPSR;
		#endif

		enaleInterrupts();
	}
